--- a/RenderSystems/GL/src/Makefile.am
+++ b/RenderSystems/GL/src/Makefile.am
@@ -15,7 +15,8 @@ RenderSystem_GL_so_SOURCES = OgreGLEngineDll.cpp \
                              OgreGLRenderSystem.cpp \
                              OgreGLSupport.cpp \
                              OgreGLTexture.cpp \
-                             OgreGLTextureManager.cpp
+                             OgreGLTextureManager.cpp \
+                             OgreGLDefaultHardwareBufferManager.cpp
 
 RenderSystem_GL_so_LDFLAGS = $(SHARED_FLAGS) -L$(top_builddir)/OgreMain/src
 RenderSystem_GL_so_LDADD = $(GL_LIBS) $(GLSUPPORT_LIBS) -lOgreMain \
