--- a/branches/vbo-unstable/RenderSystems/GL/scripts/RenderSystem_GL.vcproj
+++ b/branches/vbo-unstable/RenderSystems/GL/scripts/RenderSystem_GL.vcproj
@@ -130,6 +130,9 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm">
 			<File
+				RelativePath="..\src\OgreGLDefaultHardwareBufferManager.cpp">
+			</File>
+			<File
 				RelativePath="..\misc\OgreGLEngine.def">
 			</File>
 			<File
@@ -169,6 +172,9 @@
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc">
+			<File
+				RelativePath="..\include\OgreGLDefaultHardwareBufferManager.h">
+			</File>
 			<File
 				RelativePath="..\include\OgreGLHardwareBufferManager.h">
 			</File>
