These got lost in the merge

--- a/RenderSystems/GL/src/Makefile.am
+++ b/RenderSystems/GL/src/Makefile.am
@@ -9,6 +9,9 @@ SUBDIRS = $(OGRE_GLSUPPORT)
 pkglib_PROGRAMS = RenderSystem_GL.so
 
 RenderSystem_GL_so_SOURCES = OgreGLEngineDll.cpp \
+                             OgreGLHardwareBufferManager.cpp \
+                             OgreGLHardwareIndexBuffer.cpp \
+                             OgreGLHardwareVertexBuffer.cpp \
                              OgreGLRenderSystem.cpp \
                              OgreGLSupport.cpp \
                              OgreGLTexture.cpp \
