--- a/branches/vbo-unstable/RenderSystems/GL/src/SDL/Makefile.am
+++ b/branches/vbo-unstable/RenderSystems/GL/src/SDL/Makefile.am
@@ -1,6 +1,6 @@
-INCLUDES = $(STLPORT_CFLAGS) -I$(top_builddir)/RenderSystems/GL/include \
-           -I$(top_builddir)/OgreMain/include $(GLSUPPORT_CFLAGS) \
-           -I$(top_builddir)/PlatformManagers/$(OGRE_PLATFORM)/include 
+INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/RenderSystems/GL/include \
+           -I$(top_srcdir)/OgreMain/include $(GLSUPPORT_CFLAGS) \
+           -I$(top_srcdir)/PlatformManagers/$(OGRE_PLATFORM)/include 
 
 noinst_LIBRARIES = libsupport.a
 
