Overhauled bezier patches significantly so that they no longer generate their own meshes, and subdivide completely up-front therefore allowing much quicker level changes. Can also build themselves into external, possibly shared vertex and index buffers for use with level geometry etc. PatchMesh introduced to package PatchSurface (the builder) and Mesh (the data holder) when used as a standalone mesh.

--- a/OgreMain/scripts/OgreMain.vcproj
+++ b/OgreMain/scripts/OgreMain.vcproj
@@ -375,6 +375,9 @@
 				RelativePath="..\src\OgreParticleSystemManager.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgrePatchMesh.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgrePatchSurface.cpp">
 			</File>
 			<File
@@ -842,6 +845,9 @@
 			</File>
 			<File
 				RelativePath="..\include\OgreParticleSystemManager.h">
+			</File>
+			<File
+				RelativePath="..\include\OgrePatchMesh.h">
 			</File>
 			<File
 				RelativePath="..\include\OgrePatchSurface.h">
