Added Xmp's patch to enable libtool library versioning. Incremented current number to 1 as the new release will be an interface breaking change.

--- a/OgreMain/src/Makefile.am
+++ b/OgreMain/src/Makefile.am
@@ -133,3 +133,4 @@ libOgreMain_la_SOURCES = OgreActionEvent.cpp \
                          unzip.c
 
 libOgreMain_la_LIBADD= $(STLPORT_LIBS) $(FT2_LIBS)
+libOgreMain_la_LDFLAGS = -version-info @OGREMAIN_VERSION_INFO@
