--- a/Samples/Common/bin/resources.cfg
+++ b/Samples/Common/bin/resources.cfg
@@ -6,3 +6,5 @@ Zip=../../Media/cubemap.zip
 FileSystem=../../Media/
 Zip=../../Media/ogretestmap.zip
 Zip=../../Media/dot3bump.zip
+Zip=../../Media/cubemapsJS.zip
+Zip=../../Media/RZR-002.zip
