Squashed an awful lot of warnings, very few left now. Added iterator retrieval methods for entities, cameras, lights, billboardsets to SceneManager Node::removeChild and SceneNode::removeAndDestroyAllChildren now calls needUpdate to update bounding box Added cubemapsJS.zip back to all resources.cfg now it is ok clearScene now reinitialises nodes for skies Added setNormaliseNormals to RenderSystem and added option to Renderable and Entity, to allow people to bypass lighting problems with scaling if they want

--- a/Samples/Common/bin/resources.cfg
+++ b/Samples/Common/bin/resources.cfg
@@ -7,3 +7,4 @@ FileSystem=../../Media/
 Zip=../../Media/ogretestmap.zip
 Zip=../../Media/dot3bump.zip
 Zip=../../Media/RZR-002.zip
+Zip=../../Media/cubemapsJS.zip
