--- a/trunk/Samples/Common/bin/resources.cfg
+++ b/trunk/Samples/Common/bin/resources.cfg
@@ -7,3 +7,4 @@ FileSystem=../../Media/
 Zip=../../Media/ogretestmap.zip
 Zip=../../Media/dot3bump.zip
 Zip=../../Media/RZR-002.zip
+Zip=../../Media/cubemapsJS.zip
