--- a/trunk/Docs/src/html.cfg
+++ b/trunk/Docs/src/html.cfg
@@ -297,7 +297,7 @@ WARN_FORMAT            = "$file:$line: $text"
 # and error messages should be written. If left blank the output is written 
 # to stderr.
 
-WARN_LOGFILE           = 
+WARN_LOGFILE           = doxygen_warnings.log
 
 #---------------------------------------------------------------------------
 # configuration options related to the input files
@@ -308,11 +308,11 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces.
 
-INPUT                  = ../../../OgreMain \
-                         ../../../PlatformManagers \
-                         ../../../PlugIns \
-                         ../../../RenderSystems \
-						 ../../../ReferenceApplication/ReferenceAppLayer
+INPUT                  = ../../OgreMain \
+                         ../../PlatformManagers \
+                         ../../PlugIns \
+                         ../../RenderSystems \
+			 ../../ReferenceApplication/ReferenceAppLayer
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
@@ -427,7 +427,7 @@ ALPHABETICAL_INDEX     = YES
 # the COLS_IN_ALPHA_INDEX tag can be used to specify the number of columns 
 # in which this list will be split (can be a number in the range [1..20])
 
-COLS_IN_ALPHA_INDEX    = 1
+COLS_IN_ALPHA_INDEX    = 3
 
 # In case all classes in a project start with a common prefix, all 
 # classes will be put under the same header in the alphabetical index. 
@@ -806,7 +806,7 @@ CLASS_DIAGRAMS         = YES
 # toolkit from AT&T and Lucent Bell Labs. The other options in this section 
 # have no effect if this option is set to NO (the default)
 
-HAVE_DOT               = NO
+HAVE_DOT               = YES
 
 # If the CLASS_GRAPH and HAVE_DOT tags are set to YES then doxygen 
 # will generate a graph for each documented class showing the direct and 
