--- a/configure.in
+++ b/configure.in
@@ -1,14 +1,16 @@
 AC_PREREQ(2.50)
 
-AC_INIT(OGRE, 0.11.0)
-AM_INIT_AUTOMAKE(OGRE, 0.11.0)
-AM_CONFIG_HEADER(OgreMain/include/config.h)
+AC_INIT(OGRE, 0.12.0)
 
 AC_CANONICAL_TARGET
+
+AM_INIT_AUTOMAKE([1.6.1 foreign no-installinfo no-installman subdir-objects])
+AM_CONFIG_HEADER(OgreMain/include/config.h)
 
 dnl Check for programs
 AC_PROG_CC
 AC_PROG_CXX
+AM_PROG_CC_C_O
 AC_PROG_INSTALL
 
 AM_PROG_LIBTOOL
