Added AmitMathew's profiler, media files have been placed in OgreCore.zip

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -106,6 +106,7 @@ OgrePlatformManager.h \
 OgrePositionTarget.h \
 OgrePredefinedControllers.h \
 OgrePrerequisites.h \
+OgreProfiler.h \
 OgreProgressiveMesh.h \
 OgreQuaternion.h \
 OgreRay.h \
