--- a/trunk/OgreMain/include/Makefile.am
+++ b/trunk/OgreMain/include/Makefile.am
@@ -106,6 +106,7 @@ OgrePlatformManager.h \
 OgrePositionTarget.h \
 OgrePredefinedControllers.h \
 OgrePrerequisites.h \
+OgreProfiler.h \
 OgreProgressiveMesh.h \
 OgreQuaternion.h \
 OgreRay.h \
