--- a/trunk/OGRE.pc.in
+++ b/trunk/OGRE.pc.in
@@ -2,6 +2,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
+plugindir=@libdir@/@PACKAGE@
 
 Name: OGRE
 Description: Object-Oriented Graphics Rendering Engine
