--- a/trunk/OGRE.pc.in
+++ b/trunk/OGRE.pc.in
@@ -8,4 +8,4 @@ Name: OGRE
 Description: Object-Oriented Graphics Rendering Engine
 Version: @VERSION@
 Libs: -L${libdir} -lOgreMain
-Cflags: -I${includedir}/OGRE @OGRE_CFLAGS@
+Cflags: -I${includedir}/@PACKAGE@ @OGRE_CFLAGS@
