--- a/configure.in
+++ b/configure.in
@@ -1,10 +1,11 @@
 AC_PREREQ(2.50)
 
-AC_INIT(OGRE, 0.12.0)
+AC_INIT([OGRE], 0.12.0)
 
 AC_CANONICAL_TARGET
 
-AM_INIT_AUTOMAKE([1.6.1 foreign no-installinfo no-installman subdir-objects])
+#AM_INIT_AUTOMAKE([1.6.1 foreign no-installinfo no-installman subdir-objects])
+AM_INIT_AUTOMAKE([OGRE], 0.12.0)
 AM_CONFIG_HEADER(OgreMain/include/config.h)
 
 dnl Check for programs
