--- a/PlugIns/ParticleFX/src/Makefile.am
+++ b/PlugIns/ParticleFX/src/Makefile.am
@@ -6,6 +6,8 @@ Plugin_ParticleFX_so_SOURCES = OgreAreaEmitter.cpp \
                         OgreBoxEmitter.cpp \
                         OgreColourFaderAffector.cpp \
                         OgreColourFaderAffector2.cpp \
+						OgreColourImageAffector.cpp \
+						OgreColourInterpolatorAffector.cpp \
                         OgreCylinderEmitter.cpp \
                         OgreEllipsoidEmitter.cpp \
                         OgreHollowEllipsoidEmitter.cpp \
@@ -13,6 +15,7 @@ Plugin_ParticleFX_so_SOURCES = OgreAreaEmitter.cpp \
                         OgreParticleFX.cpp \
                         OgrePointEmitter.cpp \
                         OgreRingEmitter.cpp \
+						OgreRotationAffector.cpp \
 						OgreScaleAffector.cpp 
 
 Plugin_ParticleFX_so_LDFLAGS = $(SHARED_FLAGS) -L$(top_srcdir)/OgreMain/src
