--- a/trunk/Samples/Makefile.am
+++ b/trunk/Samples/Makefile.am
@@ -1,3 +1,3 @@
 SUBDIRS = SkeletalAnimation BezierPatch EnvMapping Transpacency Lighting \
 ParticleFX TextureFX SkyDome BSP Common SkyPlane SkyBox CameraTrack Terrain \
-Gui Nature RenderToTexture Water CubeMapping Dot3Bump
+Gui Nature RenderToTexture Water CubeMapping Dot3Bump Smoke
