--- a/trunk/RenderSystems/Direct3D9/scripts/RenderSystem_Direct3D9.vcproj
+++ b/trunk/RenderSystems/Direct3D9/scripts/RenderSystem_Direct3D9.vcproj
@@ -141,6 +141,9 @@
 				RelativePath="..\src\OgreD3D9EngineDll.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgreD3D9GpuProgram.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgreD3D9HardwareBufferManager.cpp">
 			</File>
 			<File
@@ -182,6 +185,9 @@
 			</File>
 			<File
 				RelativePath="..\include\OgreD3D9DriverList.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreD3D9GpuProgram.h">
 			</File>
 			<File
 				RelativePath="..\include\OgreD3D9HardwareBufferManager.h">
