Initial load implementation of D3D9 low level shaders Added ability to load entire DataChunk as a string Added additional rendersystem capabilities to cover granularity of setting constants

--- a/OgreMain/scripts/OgreMain.vcproj
+++ b/OgreMain/scripts/OgreMain.vcproj
@@ -271,6 +271,9 @@
 				RelativePath="..\src\OgreGpuProgram.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgreGpuProgramManager.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgreGuiContainer.cpp">
 			</File>
 			<File
