--- a/trunk/RenderSystems/Direct3D9/scripts/RenderSystem_Direct3D9.vcproj
+++ b/trunk/RenderSystems/Direct3D9/scripts/RenderSystem_Direct3D9.vcproj
@@ -144,6 +144,9 @@
 				RelativePath="..\src\OgreD3D9GpuProgram.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgreD3D9GpuProgramManager.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgreD3D9HardwareBufferManager.cpp">
 			</File>
 			<File
@@ -188,6 +191,9 @@
 			</File>
 			<File
 				RelativePath="..\include\OgreD3D9GpuProgram.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreD3D9GpuProgramManager.h">
 			</File>
 			<File
 				RelativePath="..\include\OgreD3D9HardwareBufferManager.h">
