OgreVector4.h now gets copied to <prefix>/include/OGRE on make install

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -161,6 +161,7 @@ OgreTextureManager.h \
 OgreTimer.h \
 OgreUserDefinedObject.h \
 OgreVector3.h \
+OgreVector4.h \
 OgreVertexBoneAssignment.h \
 OgreVertexIndexData.h \
 OgreViewport.h \
