Updated VC6 project and Linux makefiles for ogremain

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -50,6 +50,7 @@ OgreGuiManager.h \
 OgreGuiPressable.h \
 OgreGpuProgram.h \
 OgreGpuProgramManager.h \
+OgreGpuProgramUsage.h \
 OgreHardwareBuffer.h \
 OgreHardwareBufferManager.h \
 OgreHardwareIndexBuffer.h \
@@ -100,6 +101,7 @@ OgreParticleEmitterFactory.h \
 OgreParticleIterator.h \
 OgreParticleSystem.h \
 OgreParticleSystemManager.h \
+OgrePass.h \
 OgrePatchMesh.h \
 OgrePatchSurface.h \
 OgrePlane.h \
@@ -126,7 +128,6 @@ OgreRenderWindow.h \
 OgreRenderable.h \
 OgreResource.h \
 OgreResourceManager.h \
-OgreResourceMap.h \
 OgreRoot.h \
 OgreRotationalSpline.h \
 OgreSDDataChunk.h \
@@ -158,6 +159,8 @@ OgreSubEntity.h \
 OgreSubMesh.h \
 OgreTagPoint.h \
 OgreTargetManager.h \
+OgreTechnique.h \
+OgreTextureUnitState.h \
 OgreTGACodec.h \
 OgreTexture.h \
 OgreTextureManager.h \
