--- a/OgreMain/src/Makefile.am
+++ b/OgreMain/src/Makefile.am
@@ -24,7 +24,7 @@ libOgreMain_la_SOURCES = OgreActionEvent.cpp \
                          OgreControllerManager.cpp \
                          OgreCursor.cpp \
                          OgreDataChunk.cpp \
-			 OgreDefaultHardwareBufferManager.cpp \
+						 OgreDefaultHardwareBufferManager.cpp \
                          OgreDynLib.cpp \
                          OgreDynLibManager.cpp \
                          OgreEntity.cpp \
@@ -35,6 +35,9 @@ libOgreMain_la_SOURCES = OgreActionEvent.cpp \
                          OgreException.cpp \
                          OgreFont.cpp \
                          OgreFontManager.cpp \
+                         OgreGpuProgram.cpp \
+                         OgreGpuProgramManager.cpp \
+                         OgreGpuProgramUsage.cpp \
                          OgreGuiContainer.cpp \
                          OgreGuiControl.cpp \
 						 OgreGuiElement.cpp \
@@ -80,12 +83,13 @@ libOgreMain_la_SOURCES = OgreActionEvent.cpp \
                          OgreParticleIterator.cpp \
                          OgreParticleSystem.cpp \
                          OgreParticleSystemManager.cpp \
+                         OgrePass.cpp \
 						 OgrePatchMesh.cpp \
                          OgrePatchSurface.cpp \
                          OgrePlane.cpp \
                          OgrePlatformManager.cpp \
                          OgrePredefinedControllers.cpp \
-			 OgreProfiler.cpp \
+						 OgreProfiler.cpp \
                          OgreProgressiveMesh.cpp \
                          OgreQuaternion.cpp \
                          OgreRenderQueue.cpp \
@@ -95,7 +99,6 @@ libOgreMain_la_SOURCES = OgreActionEvent.cpp \
                          OgreRenderTexture.cpp \
                          OgreRenderWindow.cpp \
                          OgreResourceManager.cpp \
-                         OgreResourceMap.cpp \
                          OgreRoot.cpp \
                          OgreRotationSpline.cpp \
 						 OgreScrollEvent.cpp \
@@ -120,13 +123,14 @@ libOgreMain_la_SOURCES = OgreActionEvent.cpp \
                          OgreSubMesh.cpp \
                          OgreTagPoint.cpp \
                          OgreTGACodec.cpp \
+                         OgreTechnique.cpp \
                          OgreTexture.cpp \
-                         OgreTextureLayer.cpp \
                          OgreTextureManager.cpp \
+                         OgreTextureUnitState.cpp \
 						 OgreTimer.cpp \
                          OgreUserDefinedObject.cpp \
                          OgreVector3.cpp \
-			 OgreVertexIndexData.cpp \
+						 OgreVertexIndexData.cpp \
                          OgreViewport.cpp \
                          OgreWireBoundingBox.cpp \
                          OgreZip.cpp \
