Fixes missing BMP codec source and header file in Makefiles

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -12,6 +12,7 @@ OgreBillboard.h \
 OgreBillboardSet.h \
 OgreBitwise.h \
 OgreBlendMode.h \
+OgreBMPCodec.h \
 OgreBone.h \
 OgreCamera.h \
 OgreCodec.h \
