Added automatic parameter binding / updating via lazy-update AutoParamDataSource class.

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -7,6 +7,7 @@ OgreAnimationTrack.h \
 OgreArchiveEx.h \
 OgreArchiveFactory.h \
 OgreArchiveManager.h \
+OgreAutoParamDataSource.h \
 OgreAxisAlignedBox.h \
 OgreBillboard.h \
 OgreBillboardSet.h \
