--- a/RenderSystems/GL/include/Makefile.am
+++ b/RenderSystems/GL/include/Makefile.am
@@ -1,4 +1,6 @@
 noinst_HEADERS = OgreGLPrerequisites.h \
+                 OgreGLGpuProgram.h \
+                 OgreGLGpuProgramManager.h \
 		 OgreGLRenderSystem.h \
                  OgreGLSupport.h \
                  OgreGLTexture.h \
