Added CgProgramManager to Linux project files. Added MaterialUpgrader to Linux project files. Changed name of MeshUpgrader to OgreMeshUpgrade for consistency. Added Plugin_CgProgramManager.so to plugins.cfg.

--- a/PlugIns/Makefile.am
+++ b/PlugIns/Makefile.am
@@ -1,1 +1,1 @@
-SUBDIRS = BSPSceneManager FileSystem ParticleFX OctreeSceneManager GuiElements NatureSceneManager
+SUBDIRS = BSPSceneManager CgProgramManager FileSystem ParticleFX OctreeSceneManager GuiElements NatureSceneManager
