--- a/Samples/Common/bin/plugins.cfg
+++ b/Samples/Common/bin/plugins.cfg
@@ -11,5 +11,5 @@ Plugin=Plugin_BSPSceneManager.so
 Plugin=Plugin_OctreeSceneManager.so
 Plugin=Plugin_GuiElements.so
 Plugin=Plugin_NatureSceneManager.so
-
+Plugin=Plugin_CgProgramManager.so
 
