--- a/Tools/MeshUpgrader/src/Makefile.am
+++ b/Tools/MeshUpgrader/src/Makefile.am
@@ -1,5 +1,5 @@
 INCLUDES=-I$(top_srcdir)/OgreMain/include -I$(top_srcdir)/Tools/MeshUpgrader/include
-bin_PROGRAMS=MeshUpgrader
-MeshUpgrader_SOURCES= main.cpp 
-MeshUpgrader_LDFLAGS= -L$(top_srcdir)/OgreMain/src
-MeshUpgrader_LDADD= -lOgreMain
+bin_PROGRAMS=OgreMeshUpgrade
+OgreMeshUpgrade_SOURCES= main.cpp 
+OgreMeshUpgrade_LDFLAGS= -L$(top_srcdir)/OgreMain/src
+OgreMeshUpgrade_LDADD= -lOgreMain
