Added cel-shading demo, this is a good test of vs_1_1 and ps_1_1 support.

--- a/configure.in
+++ b/configure.in
@@ -123,6 +123,8 @@ AC_CONFIG_FILES([Makefile \
     Samples/BezierPatch/include/Makefile \
     Samples/CameraTrack/Makefile \
     Samples/CameraTrack/src/Makefile \
+    Samples/CelShading/Makefile \
+    Samples/CelShading/src/Makefile \
     Samples/CubeMapping/Makefile \
     Samples/CubeMapping/src/Makefile \
     Samples/CubeMapping/include/Makefile \
