Added GLGpuProgram registration which is needed the the nvparse code. Added the nvparse GLGpuProgram.

--- a/RenderSystems/GL/include/Makefile.am
+++ b/RenderSystems/GL/include/Makefile.am
@@ -1,5 +1,6 @@
 noinst_HEADERS = OgreGLPrerequisites.h \
                  OgreGLGpuProgram.h \
+                 OgreGLGpuNvparseProgram.h \
                  OgreGLGpuProgramManager.h \
 		 OgreGLRenderSystem.h \
                  OgreGLSupport.h \
